--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,7 @@ html, body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  height: 100%;
   position: relative;
   background: var(--app-bg, var(--card-bg));
 }
@@ -55,6 +56,10 @@ header {
   border-bottom: 2px solid;
   border-bottom-color: var(--border-color, #eee);
   width: 100%;
+}
+
+.app.is-standalone header {
+  padding-top: calc(20px + env(safe-area-inset-top));
 }
 
 header h1 {
@@ -367,6 +372,7 @@ main {
     z-index: 999;
     align-items: center;
     justify-content: space-around;
+    margin-top: auto;
   }
 
   .app.is-standalone .bottom-nav {
