--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ html, body {
 }
 
 #root {
-  min-height: 100%;
+  height: 100%;
   width: 100%;
   background: var(--app-bg, #ffffff);
 }
@@ -37,8 +37,8 @@ html, body {
 .app {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
   height: 100%;
+  min-height: 100%;
   position: relative;
   background: var(--app-bg, var(--card-bg));
 }
